--- a/src/css-sorcerers-apprentice/style.styl
+++ b/src/css-sorcerers-apprentice/style.styl
@@ -7,10 +7,27 @@ $running-radius = 0 80% 20% 100% \/ 0 50% 0% 150%
 $walking-radius = 0 50% 35% 40% \/ 0 50% 0% 40%
 
 :root
-  --bristle-color yellow
+  --bristle-color hsl(49, 75%, 70%)
   --bristle-band red
+  --brush-color-one hsl(35, 79%, 25%)
+  --brush-color-two hsl(35, 79%, 47%)
   --bg #111
   --transition .1
+  --sweep 0
+  --speed 1
+  --rotation 2
+  --scale-end 0.95
+  --bristle-radius $walking-radius
+  --bristle-scale 1
+  --bristle-after-x 0
+  --bristle-after-rotation 15
+  --bristle-before-scale 1
+  --bristle-before-rotation 20
+  --arm-scale 1
+  --arm-angle 30
+  --forearm-angle -20
+  --swing 1
+  --txt-color hsl(206, 100%, 80%)
 
 body
   align-items center
@@ -18,6 +35,9 @@ body
   display flex
   justify-content center
   min-height 100vh
+
+input
+  opacity 0
 
 /**
 * If the input is valid, make the broom sweep
@@ -32,10 +52,37 @@ body
   --bristle-before-scale 0
   --bristle-before-rotation 15
   --bristle-scale 1
+  --arm-scale 0
 
-.command:valid:not(:focus) ~ .broom-container .broom
+  .broom__arm
+    --arm-scale 0
+    // animation-name none
+
+  .broom__bristles-wrap
+    animation-name none
+
+.arms:checked ~ .broom-container .broom
+  --arm-scale 1
+  --arm-angle 45
+
+.bounce:checked ~ .command:invalid ~ .broom-container .broom
+  --bristle-radius $running-radius
+  --bristle-scale 1.15
+  --speed .5
+  --rotation 4
+  --scale-end 0.85
+  --bristle-after-x 0
+  --bristle-after-rotation 15
+  --bristle-before-scale 1
+  --bristle-before-rotation 20
+  --arm-scale 1
+  --arm-angle 60
+  --forearm-angle -50
   --sweep 0
-
+  --swing 1
+  animation-name none
+  .broom__arm
+    --arm-angle 60
 /**
 * This is the default state as the placeholder is shown.
 * As soon as we start tapping keys, let's up the pace and make the broom
@@ -52,17 +99,113 @@ body
   --bristle-after-rotation 15
   --bristle-before-scale 1
   --bristle-before-rotation 20
+  --arm-scale 1
+  --arm-angle 30
+  --forearm-angle -20
+  --swing 1
+  // Safari
+  animation-name none
+  .broom__arm
+    --arm-scale 1
+    // animation-name swing
+  .broom__bristles-wrap
+    animation-name waddle
+
+
+/**
+* Controls related styling
+*/
+.flash
+.arms
+.bounce
+.command
+  position absolute
+  top 10px
+  left 10px
+.arms
+  left 50px
+.bounce
+  left 90px
+.command
+  left 130px
+
+// .flash:checked
+// .arms:checked
+// .bounce:checked
+
+.flash:checked ~ [for='flash']
+.arms:checked ~ [for='arms']
+.bounce:checked ~ [for='bounce']
+  display none
+.flash:checked ~ .broom-container .broom
+  animation-name flash, jump
+  animation-duration .25s, .25s
+  animation-iteration-count 4, 1
+  animation-timing-function steps(1), ease-in
+
+.flash-label
+.bounce-label
+.arms-label
+  opacity .5
+  height 100vh
+  width 100vw
+  position absolute
+  z-index 10
+
+.instruction
+  position absolute
+  bottom 20px
+  right 20px
+  color var(--txt-color)
+  font-weight bold
+  font-variant small-caps
+  font-size 2rem
+  font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  display none
+
+  @media(min-width 768px)
+    font-size 4rem
+
+.instruction[for='flash']
+  display block
+
+.flash:checked
+  display none
+
+  ~ .instruction[for='arms']
+    display block
+
+.arms:checked
+  display none
+  ~ .instruction[for='arms']
+    display none
+  ~ .instruction[for='bounce']
+    display block
+
+.bounce:checked
+  display none
+
+  ~ .instruction[for='bounce']
+    display none
+  ~ .instruction.tap
+  ~ .catch-all
+    display block
+
+.catch-all
+  display none
+  top 0
+  left 0
+  height 100vh
+  width 100vw
+  position absolute
+  z-index 100
+/** End controls related styling */
 
 .bounce:checked ~ .broom-container .broom
-  --bristle-radius $running-radius
-  --bristle-scale 1.15
-  --speed .5
-  --rotation 4
-  --scale-end 0.85
-  --bristle-after-x 0
-  --bristle-after-rotation 15
-  --bristle-before-scale 1
-  --bristle-before-rotation 20
+  animation-name sweep
+  animation-duration calc(var(--sweep) * 1s)
+  animation-iteration-count infinite
+  animation-timing-function ease
 
 .broom
   --bristle-radius $sweep-radius
@@ -71,19 +214,28 @@ body
   --bristle-after-rotation 15
   --bristle-before-scale 0
   --bristle-before-rotation 20
-  animation sweep calc(var(--sweep) * 1s) infinite ease
+  --bristle-scale 1
+  --arm-angle 40
+  --forearm-angle 0
+  --arm-scale 0
+  --swing 1
   height 100%
   transform-origin 50% 10%
   transition transform calc(var(--transition) * 1s) ease
   width 100%
   z-index 2
+  animation-name sweep
+  animation-duration calc(var(--sweep) * 1s)
+  animation-iteration-count infinite
+  animation-timing-function ease
 
   &__handle
     position absolute
     top 0
     left 50%
-    height 65%
-    background linear-gradient(90deg, brown, yellow)
+    // Required for overlap cross browser
+    height 66%
+    background linear-gradient(90deg, var(--brush-color-one), var(--brush-color-two))
     width 8%
     transform translate(-50%, 0)
     transform-origin bottom center
@@ -92,6 +244,18 @@ body
     animation-iteration-count infinite
     animation-name shake
     animation-timing-function ease
+
+    // Purely used for covering the arm joints
+    &-shade
+      border-radius 50% 50% 0 0 / 5% 5% 0 0
+      height 60%
+      width 100%
+      background linear-gradient(90deg, var(--brush-color-one), var(--brush-color-two))
+      z-index 2
+      top 0
+      left 0
+      position absolute
+
 
     &:before
       background var(--bristle-band)
@@ -117,6 +281,82 @@ body
       transform translate(-50%, 0)
       width 300%
       z-index 2
+
+  &__arm
+    --is-right 0
+    position absolute
+    width 50%
+    height 35%
+    top 40%
+    transition transform calc(var(--transition) * 1s)
+    transform-origin top center
+    animation-name swing
+    animation-duration calc(var(--speed) * var(--swing) * 1s)
+    animation-delay calc((var(--is-right) * (var(--speed) / 2)) * 1s)
+    animation-iteration-count infinite
+    animation-timing-function ease
+    animation-fill-mode both
+
+    &--left
+      --bg var(--brush-color-one)
+      left 0
+      transform rotateY(calc(var(--is-right) * 180 * 1deg)) rotate(calc(var(--arm-angle) * 1deg)) scaleY(var(--arm-scale))
+
+    &--right
+      --bg var(--brush-color-two)
+      --is-right 1
+      right 0
+      transform rotateY(calc(var(--is-right) * 180 * 1deg)) rotate(calc(var(--arm-angle) * 1deg)) scaleY(var(--arm-scale))
+
+    &-bicep
+      background var(--bg)
+      height 50%
+      width 100%
+      position absolute
+      top 0
+      left 0
+      border-radius 50% 50% 0 0 / 5% 5% 0 0
+    &-forearm
+      position absolute
+      background var(--bg)
+      height 50%
+      top 48%
+      left 0
+      width 100%
+      transform rotate(calc(var(--forearm-angle) * 1deg))
+      transform-origin top center
+
+  &__hand
+    height 14px
+    width 14px
+    background var(--bg)
+    border-radius 100%
+    position absolute
+    bottom 0
+    left 50%
+    transform translate(-50%, 50%)
+
+  &__finger
+    height 80%
+    background var(--bg)
+    width 25%
+    position absolute
+    top 50%
+    left 50%
+    border-radius 50%
+
+    &:nth-of-type(1)
+      transform translate(-50%, -50%) rotate(-80deg) translate(0, 50%)
+
+    &:nth-of-type(2)
+      transform translate(-50%, -50%) rotate(-20deg) translate(0, 50%)
+
+    &:nth-of-type(3)
+      transform translate(-50%, -50%) rotate(20deg) translate(0, 50%)
+
+    &:nth-of-type(4)
+      transform translate(-50%, -50%) rotate(60deg) translate(0, 50%)
+
 
   &__brush
     bottom 0
@@ -213,11 +453,37 @@ body
   50%
     transform translate(-50%, 0) rotate(calc(var(--rotation) * 1deg))
 
+@keyframes swing
+  0%, 100%
+    transform rotateY(calc((var(--is-right) * 180) * 1deg)) rotate(calc(var(--arm-angle) * 1deg)) scaleY(var(--arm-scale))
+  50%
+    transform rotateY(calc((var(--is-right) * 180) * 1deg)) rotate(calc(var(--arm-angle) * .85deg)) scaleY(var(--arm-scale))
+
 @keyframes sweep
   0%, 5%, 95%, 100%
     transform rotate(15deg)
   45%, 50%, 55%
     transform rotate(-15deg)
+
+@keyframes jump
+  0%, 100%
+    transform translate(0, 0) scale(1)
+  50%
+    transform translate(0, -50%) scale(1.15)
+
+@keyframes flash
+  0%
+    filter drop-shadow(0 0 20px yellow)
+  20%
+    filter drop-shadow(0 0 20px purple)
+  40%
+    filter drop-shadow(0 0 20px blue)
+  60%
+    filter drop-shadow(0 0 20px green)
+  80%
+    filter drop-shadow(0 0 20px red)
+  100%
+    filter drop-shadow(0 0 20px dodgerblue)
 
 // TODO: Drop-filter hover positioning LEFT CENTER RIGHT refactor to CSS vars, one animation etc.
 
