--- a/src/css-russian-bears/style.styl
+++ b/src/css-russian-bears/style.styl
@@ -1,110 +1,158 @@
 *
+  -webkit-tap-highlight-color transparent
   box-sizing border-box
+  outline-color transparent
 
 body
-  min-height 100vh
-  display flex
   align-items center
+  background #fafafa
+  display flex
   justify-content center
+  min-height 100vh
   transform-style preserve-3d
 
 :root
   --speed .25
-  --scale-step 6
-  --base-height 200
+  --scale-step 8
   --base-width 100
-  --slide-distance 120
-  --pop-height 50
+  --base-height calc(var(--base-width) * 1.83333333333)
+  --slide-distance 60
+  --pop-height 60
   --base-slide calc(var(--base-width) * 1)
 
+  @media(min-width 768px)
+    --base-width 300
+
 .bears
-  width calc(var(--base-width) * 2px)
-  height calc(var(--base-height) * 1px)
-  display flex
   align-items flex-end
+  border-bottom 4px solid #aaa
+  display flex
+  height calc(var(--base-height) * 1px)
   justify-content center
-  border-bottom 2px solid black
+  margin 0
+  width calc(var(--base-width) * 2px)
 
 .bear
+  --bear-color 'hsl(25, 80%, %s)' % (calc(var(--lightness) * 1%))
+  --claw-color 'hsl(25, 80%, %s)' % (calc((var(--lightness) - 20) * 1%))
+  --shirt-color 'hsl(%s, 50%, 50%)' % (var(--shirt-hue))
   --height calc((var(--base-height) * ((100 - (var(--bear-index) + 1) * var(--scale-step)) / 100)))
   --width calc((var(--base-width) * ((100 - (var(--bear-index) + 1) * var(--scale-step)) / 100)))
   --dummy-height calc((var(--base-height) * ((100 - (var(--bear-index) + 2) * var(--scale-step)) / 100)))
   --dummy-width calc((var(--base-width) * ((100 - (var(--bear-index) + 2) * var(--scale-step)) / 100)))
   height calc(var(--height) * 1px)
-  width calc(var(--width) * 1px)
-  position absolute
   display none
-  transition transform .25s ease
+  position absolute
   transform-origin bottom center
+  transition transform .25s ease
+  width calc(var(--width) * 1px)
   z-index calc(var(--bear-count) - var(--bear-index))
 
-  /**
-   * The dummy requires no z-indexing
-  */
+  .bear-body
+    fill var(--bear-color)
+
+  .bear-shirt
+    fill var(--shirt-color)
+
+  .bear-claw
+    fill var(--claw-color)
+
+  .bear-foot
+    stroke var(--claw-color)
+
   &--dummy
-    left 50%
-    display block
     bottom 0
+    display block
+    height 100%
+    left 50%
     transform translate(-50%, 0) translate(0, 0)
     width 100%
-    height 100%
     z-index auto
 
     &--half
-      position absolute
       bottom 0
-      left 50%
-      transform translate(-50%, calc(var(--translation) * 1%))
       height calc(var(--dummy-height) * .5px)
-      width calc(var(--dummy-width) * 1px)
+      left 50%
+      overflow hidden
+      position absolute
+      transform translate(-50%, calc(var(--translation) * 1%))
       transform-origin bottom center
+      width calc(var(--dummy-width) * 1px)
       z-index 2
+
+    svg
+      height 200%
+      position absolute
+      width 100%
 
     &--top
       --translation -100
-      background hsl(12, 100%, 20%)
+      svg
+        top 0
 
     &--bottom
       --translation 0
-      background brown
+      svg
+        bottom 0
 
   /**
    * Bear is actually used as a container
    * We use two half elements to mimic top and bottom
   */
-  .bear__half
-    position absolute
-    background brown
+  &__half
+    height 50%
     left 50%
+    overflow hidden
+    position absolute
     right 0
     top 50%
-    height 50%
-    width 100%
     transform translate(-50%, calc(var(--translation) * 1%))
+    width 100%
+
+    svg
+      height 200%
+      position absolute
+      width 100%
 
     &--top
       --translation -100
-      background hsl(12, 100%, 20%)
+
+      svg
+        top 0
 
     &--bottom
       --translation 0
+      svg
+        bottom 0
 
-
-input
-  position absolute
-  top 0
-  right 0
-  bottom 0
-  left 0
-  height 100vh
-  width 100vw
+[type='checkbox']
+[type='reset']
   display none
-  -webkit-appearance none
-  transform translate3d(0, 0, 1px)
-  z-index calc(var(--bear-count) - var(--bear-index))
-  opacity 0
 
+label
+  cursor pointer
 
+[for='reset']
+  height 44px
+  position absolute
+  right 10px
+  top 10px
+  transition transform calc(var(--speed) * 1s) ease
+  width 44px
+
+  &:hover
+    transform translate(0, -5%) scale(1.1)
+
+    svg path
+      fill #111
+
+  svg
+    height 44px
+    width 44px
+
+    path
+      transition fill calc(var(--speed) * 1s) ease
+      fill #aaaaaa
 /**
  * A lot needs to happen when we check the box
  * 1. Disable clicking til animation finished
@@ -118,32 +166,21 @@ input
 */
 input:checked
   /**
-   * Quickest way to hide this input? Display none it.
-   * Or, if browsers aren't happy, slide it off canvas.
-   * When we are checked, is there a way to slide the last opened a little further left?
-   * Maybe a duplicate track?
-  */
-  animation disappear 0s calc(var(--speed) * 5s) forwards
-  // display none
-  /**
    * As soon as the input is checked, chain animations in forwards fill
    * for the container bear. This means scale up, slide left, open up
    * Reveal inner bear.
   */
   + .bear
+    pointer-events none
     animation slideLeft calc(var(--speed) * 1s) forwards,
-              slideOut calc(var(--speed) * 1s) calc(var(--speed) * 6s) forwards
-    // ,
-              // disappear 1s calc(var(--speed) * 5s) forwards
+              slideOut calc(var(--speed) * 1s) calc(var(--speed) * 5s) forwards
 
     .bear__half--top
       transform-origin bottom left
-      animation open calc(var(--speed) * 1s) calc(var(--speed) * 1s) forwards
+      animation open calc(var(--speed) * 2s) calc(var(--speed) * 1s) forwards
 
     // Once the top has opened, move the dummy up and out and into the spot where it should be
-
     .bear--dummy
-      color blue
       animation popOut calc(var(--speed) * 1s) calc(var(--speed) * 2s) forwards,
                 slideRight calc(var(--speed) * 1s) calc(var(--speed) * 3s) forwards,
                 popDown calc(var(--speed) * 1s) calc(var(--speed) * 4s) forwards,
@@ -155,12 +192,6 @@ input:checked
       animation appear 0s calc(var(--speed) * 5s) both
 
     + input
-      display block
-      animation appear 0s calc(var(--speed) * 5s) both
-
-      &:checked
-        animation disappear 0s calc(var(--speed) * 5s) forwards
-
       &:checked + .bear
         animation slideLeft calc(var(--speed) * 1s) forwards,
                   slideOut calc(var(--speed) * 1s) calc(var(--speed) * 6s) forwards
@@ -188,8 +219,14 @@ input:checked
     transform translate(calc((var(--base-slide) * -1px) + var(--slide-distance) * -2%), 0)
 
 @keyframes open
-  to
-    transform translate(-50%, calc(var(--translation) * 1%)) rotate(-180deg)
+  0%
+    transform translate(-50%, calc(var(--translation) * 1%)) translate(0, 0)
+  {100 / 3%}
+    transform translate(-50%, calc(var(--translation) * 1%)) translate(0, -100%)
+  {100/ 3 * 2%}
+    transform translate(-50%, calc(var(--translation) * 1%)) translate(-100%, -100%)
+  100%
+    transform translate(-50%, calc(var(--translation) * 1%)) translate(-100%, 100%)
 
 @keyframes popOut
   to
